--- a/frontend/Web/src/app/_auth/cadastro/cadastro-paciente/cadastro-paciente.component.html
+++ b/frontend/Web/src/app/_auth/cadastro/cadastro-paciente/cadastro-paciente.component.html
@@ -149,7 +149,12 @@
                     </div>
                 </div>
                 <div class="form-floating w-50">
-                    <input type="text" class="form-control" id="floatingEscolaridade" placeholder="Escolaridade" name="escolaridade" [(ngModel)]="paciente.escolaridade" required #escolaridadeInput="ngModel" [ngClass]="{ 'is-invalid': form.submitted && escolaridadeInput.errors }">
+                    <select class="form-select" id="floatingEscolaridade" name="escolaridade" [(ngModel)]="paciente.escolaridade" required #escolaridadeInput="ngModel" [ngClass]="{ 'is-invalid': form.submitted && escolaridadeInput.errors }">
+                        <option value="">Selecione...</option>
+                        <option *ngFor="let escolaridade of getEscolaridadeOptions()" [value]="escolaridade.value">
+                            {{escolaridade.label}}
+                        </option>
+                    </select>
                     <label for="floatingEscolaridade">Escolaridade</label>
                     <div *ngIf="escolaridadeInput.errors && form.submitted" class="invalid-feedback">
                         A escolaridade é obrigatória!
