Corrigir a lógica de recuperar senha e finalizar a edição de avaliação

--- a/frontend/Web/src/app/_auth/login/login.component.html
+++ b/frontend/Web/src/app/_auth/login/login.component.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="password-reset">
-                <a href="#">Recuperar senha</a>
+                <a routerLink="/recuperar-senha">Recuperar senha</a>
             </div>
 
             <div *ngIf="errorMessage" class="alert alert-danger">
