Implementacao parcial do calculo de pontuacao

--- a/frontend/Web/src/app/tecnico/paciente/editar-avaliacao/editar-avaliacao.component.html
+++ b/frontend/Web/src/app/tecnico/paciente/editar-avaliacao/editar-avaliacao.component.html
@@ -179,7 +179,7 @@
             </button>
             
             <button class="btn btn-success" 
-                    [disabled]="!formGroup?.valid"
+                    [disabled]="!formGroup.valid"
                     (click)="salvarAvaliacao()">
                 Salvar Alterações
             </button>
