--- a/frontend/Web/src/app/tecnico/tecnico-layout/tecnico-layout.component.html
+++ b/frontend/Web/src/app/tecnico/tecnico-layout/tecnico-layout.component.html
@@ -17,15 +17,9 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/tecnico/comparar-resultados">
-          <i class="fas fa-chart-line"></i>
-          <span class="nav-text">Resultados</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/tecnico/paciente/historico-paciente">
-          <i class="fas fa-history"></i>
-          <span class="nav-text">Histórico</span>
+        <a class="nav-link" routerLink="/cadastro/tecnico">
+          <i class="fas fa-user-plus"></i>
+          <span class="nav-text">Cadastrar Técnico</span>
         </a>
       </li>
       <li class="nav-item">
